# clashprofile

./: .gitignore  README.md  config.py  log.py  main.py  pyproject.toml  requirements.txt  updater.py  utils.py
clash/: __init__.py  proxy.py  proxygroup.py
config/: __init__.py  subscribe.py  tools.py
static/: config.exp.yaml  config.yml
static/template/: whitelist.yml
subscribe/: __init__.py  clash.py  jms.py
